package Interface;

public interface Upgradeable {

    void upgrade();

    void setUpgraded(boolean upgradedState);
    boolean isUpgraded();



}
